# E-commerce-FastApi_Next

./: .gitignore  README.md
backend/: .env  main.py  pyproject.toml
backend/src/: app.py
backend/src/core/: auth.py  config.py  security.py
backend/src/models/: category.py  page.py  product.py  product_image.py  sections.py  users.py  vendor.py
backend/src/routes/protected/: category.py  page.py
backend/src/routes/public/: auth.py  category.py  page.py
backend/src/schemas/: category.py  section.py  users.py
backend/src/services/: role_checker.py
